# ece5532_gazebo

./: .clang-format  .gitignore  README.md
ece5532_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ece5532_gazebo/launch/: gazebo_bringup.launch.py  model_test_world.launch.xml  oval_track_world.launch.xml
ece5532_gazebo/models/cat/: model.config  model.sdf
ece5532_gazebo/models/curved_road_100m/: model.sdf
ece5532_gazebo/models/curved_road_100m/meshes/: curved_road_100m.blend  one_way_four_lane.mtl  one_way_two_lane.mtl  two_way_four_lane.mtl  two_way_two_lane.mtl
ece5532_gazebo/models/curved_road_50m/: model.config  model.sdf
ece5532_gazebo/models/curved_road_50m/meshes/: curved_road_50m.blend  one_way_two_lane.mtl  two_way_two_lane.mtl
ece5532_gazebo/models/dog/: model.config  model.sdf
ece5532_gazebo/models/intersection/: model.config  model.sdf
ece5532_gazebo/models/intersection/meshes/: half_placeholder.mtl  intersection.blend  intersection.mtl  placeholder.mtl  quarter_placeholder.mtl
ece5532_gazebo/models/maze/: maze.sdf  model.config
ece5532_gazebo/models/search_and_rescue_building/: model.config  model.sdf
ece5532_gazebo/models/stop_sign/: model.config  model.sdf
ece5532_gazebo/models/stop_sign/meshes/: stop_sign.mtl
ece5532_gazebo/models/straight_road_100m/: model.config  model.sdf
ece5532_gazebo/models/straight_road_100m/meshes/: one_way_four_lane.mtl  one_way_two_lane.mtl  straight_road_100m.blend  two_way_four_lane.mtl  two_way_two_lane.mtl
ece5532_gazebo/models/straight_road_50m/: model.config  model.sdf
ece5532_gazebo/models/straight_road_50m/meshes/: one_way_four_lane.mtl  one_way_two_lane.mtl  straight_road_50m.blend  two_way_four_lane.mtl  two_way_two_lane.mtl
ece5532_gazebo/models/textures/: one_way_four_lane.xcf  one_way_two_lane.xcf  two_way_four_lane.xcf  two_way_two_lane.xcf
ece5532_gazebo/models/traffic_light/: model.config  model.sdf
ece5532_gazebo/src/: TrafficLightPlugin.cpp  TrafficLightPlugin.hpp
ece5532_gazebo/worlds/: model_test_world.sdf  oval_track_world.sdf  road_world_template.sdf
roundbot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
roundbot_description/models/roundbot/: model.config  model.sdf
roundbot_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
roundbot_gazebo/config/: ros_gz_bridge.yaml
roundbot_gazebo/include/roundbot_gazebo/: MotorSim.hpp  RoundbotInterfacePlugin.hpp
roundbot_gazebo/launch/: roundbot_test.launch.xml
roundbot_gazebo/rviz/: roundbot_test.rviz
roundbot_gazebo/src/: RoundbotInterfacePlugin.cpp
roundbot_gazebo/worlds/: roundbot_depot.sdf  roundbot_empty.sdf  roundbot_gps_world.sdf  roundbot_maze.sdf
