<?xml version="1.0"?>
<package format="3">
  <name>ece5532_gazebo</name>
  <version>0.0.0</version>
  <description>
    Models and Gazebo launch management files to support simulations
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
