<?xml version="1.0"?>
<package format="3">
  <name>roundbot_description</name>
  <version>0.1.0</version>
  <description>
    SDF description for Roundbot
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
