<?xml version="1.0"?>
<package format="3">
  <name>roundbot_gazebo</name>
  <version>0.0.0</version>
  <description>
    Plugin and launch configuration to simulate Roundbot in Gazebo
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roundbot_description</depend>
  <depend>gz_sim_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>ros_gz</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
